Refactoring users uuid > id
